SDK min version 21 Android 5.0  App version 1.7

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,8 @@
     <string name="next">Siguiente</string>
     <string name="nextContinue">Continuar</string>
     <string name="nextDescription">Pulsa siguiente para comprobar y continuar</string>
-    <string name="answerSuccess">Bien, siguiente</string>
-    <string name="answerError">Mal no pasa nada, continúa</string>
+    <string name="answerSuccess">Bien</string>
+    <string name="answerError">Error</string>
 
     <string name="title_activity_alphabet">Alfabeto</string>
     <string name="wordExercises">Ejercicios de palabras</string>
