--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,16 +49,14 @@
     <string name="timeLabel">Tiempo</string>
     <string name="bestTimeLabel">Mejor</string>
     <string name="title_activity_help">Ayuda</string>
-    <string name="mainParagraph">
+    <string name="sloganParagraph">
+        \n
         \nAPRENDE BRAILLE
         \nLa mejor manera de aprender es practicando.
         \nVersion 1.7
         \n
-        \nPOLÍTICA DE PRIVACIDAD DE APRENDE BRAILLE APP ANDROID
-        \nNo requiere ningún permiso, no se recoge ni se envía ninguna información del usuario ni del dispositivo.
-        \nLa política de privacidad es pública en el siguiente enlace: https://raw.githubusercontent.com/mariouged/AprendeBraille/main/politica-privacidad
-        \nNo se envía ninguna información a internet, ni a servidores propios ni de terceros.
-        \n
+    </string>
+    <string name="mainParagraph">
         \nALFABETO BRAILLE
         \nEl sistema Braille es un alfabeto, apartir del signo generador
         \n1 4
@@ -66,24 +64,27 @@
         \n3 6
         \n
         \nA partir de estos seis puntos se pueden generar 63 combinaciones para representar las letras del abecedario.
-        \nPor ejemplo la f sería
+        \nPor ejemplo la letra q serían los puntos:
         \n1 4
-        \n2
-        \n
-        \n
-        \nPor ejemplo la m sería
-        \n1 4
-        \n
+        \n2 5
         \n3
+        \n
+        \nOtro ejemplo la letra u sería
+        \n1
+        \n
+        \n3 6
         \n
         \nRepasa todo el abecedario pulsando el botón alfabeto o en el menú alfabeto.
         \n
-        \n
+    </string>
+    <string name="privacyPolicyShortParagraph">
         \nPOLÍTICA DE PRIVACIDAD DE APRENDE BRAILLE APP ANDROID
         \nNo requiere ningún permiso, no se recoge ni se envía ninguna información del usuario ni del dispositivo.
         \nNo se recolecta ningún dato personal.
         \nNo se envía ninguna información a internet, ni a servidores propios ni de terceros.
         \n
+    </string>
+    <string name="privacyPolicyLongParagraph">
         \nEsta política de privacidad simplemente te informa que esta app
         \nno recolecta información personal ni del dispositivo
         \ny que no se envía ninguna información a internet,
@@ -95,34 +96,18 @@
         \nLa política de privacidad es pública en el siguiente enlace: https://raw.githubusercontent.com/mariouged/AprendeBraille/main/politica-privacidad
         \ny el usuario puede leerla en la pantalla principal
         \nNo se recoge ni transmite ningún datos de caracter personal, ni dispositivo , ni sensible y tampoco se comparten con ningún tercero.
+        \n
     </string>
     <string name="helpParagraph">
-        \nAPRENDE BRAILLE
-        \nLa mejor manera de aprender es practicando.
-        \nVersion 1.7
+        \nLa aplicación, contiene el alfabeto braille en Español.
+        Permite realizar ejercicios de letras, números, palabras y frases.
+        Son test de preguntas, en las que se debe leer en braille e introducir la respuesta.
+        Al finalizar el ejercicio se mostrarán las correctas, falladas, tiempo empleado
+        , mejor tiempo y las letras que hay que repasar.
         \n
-        \nPrimero repasa el alfabeto, haz ejercicios de letras para practicar y aprenderlas todas.
+        \nPrimero repasa el alfabeto, haz ejercicios de letras para practicar y aprender todas.
         Con los ejercicios de palabras terminarás de aprender el alfabeto.
         Para el nivel más avanzado haz ejercicios de frases.
-        \n
-        \nALFABETO BRAILLE
-        \nEl sistema Braille es un alfabeto, apartir del signo generador
-        \n1 4
-        \n2 5
-        \n3 6
-        \n
-        \nA partir de estos seis puntos se pueden generar 63 combinaciones para representar las letras del abecedario.
-        \nPor ejemplo la f sería
-        \n1 4
-        \n2
-        \n
-        \n
-        \nPor ejemplo la m sería
-        \n1 4
-        \n
-        \n3
-        \n
-        \nRepasa todo el abecedario pulsando el botón alfabeto o en el menú alfabeto.
         \n
         \nTambién hay ejercicios de números, los números del 1 al 0, coinciden con las letras de la a hasta la j.
         \nPero llevan delante el signo 3 4 5 6.
@@ -132,27 +117,33 @@
         \n
         \nLamentandolo mucho sólo sirve para que aprendan personsa que ven con los ojos: profesores, amigos, familiares, ...
         \n"Los ciegos también ven, pero con las manos y los oídos"
-        \nLa aplicación es accesible, con descripciones para los textos, botones, ...
+        \nLa aplicación es accesible, con descripciones para los textos, botones, etiquetas ...
         Activa el servicio TalkBack y podrás acceder a una descripción de cada elemento.
         \n
-        \nTienes disponibles mensajes de voz cuando aciertas o fallas
-         en una pregunta, por defecto algunos están desactivados, les puedes configurarlos
-         en el menú Ajustes.
+        \nTienes disponibles mensajes de voz cuando aciertas o fallas, en el menú ajustes pueden ser configurados.
         \n
         \nPor el momento:
         \n- No se utilizan mayúsculas.
         \n- Solo en Español
         \n
-        \nLa aplicación, contiene el alfabeto braille en Español.
-        Permite realizar ejercicios de letras, números, palabras y frases.
-        Son test de preguntas, en las que se debe leer en braille e introducir la respuesta.
-        Al finalizar el ejercicio se mostrarán las correctas, falladas, tiempo empleado
-        , mejor tiempo y las letras que hay que repasar.
+        \nPuedes usarla en cualquier momento, no necesita conexión a internet por lo que no te consumirá datos.
         \n
-        \nNo requiere ningún permiso, no se recoge ni se envía ninguna información del usuario.
+    </string>
+    <string name="licenseParagraph">
+        \nLICENSE
+        \nThis program is free software: you can redistribute it and/or modify
+        \nit under the terms of the GNU General Public License as published by
+        \nthe Free Software Foundation, either version 3 of the License.
         \n
-        \nPuedes usarla en cualquier momento
-        \n, no necesita conexión a internet por lo que no te consumirá datos.
+        \nThis program is distributed in the hope that it will be useful,
+        \nbut WITHOUT ANY WARRANTY; without even the implied warranty of
+        \nMERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+        \nGNU General Public License for more details.
+        \n
+        \nYou should have received a copy of the GNU General Public License
+        \nalong with this program.  If not, see http://www.gnu.org/licenses/
+        \n
+        \nContact: mario.ugedo@gmail.com
         \n
     </string>
     <string name="phraseExample">El perro de san roque no tiene rabo porque Ramón Ramirez se lo ha cortado</string>
