--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,125 +1,131 @@
 <resources>
-    <string name="app_name">Aprende Braille</string>
+    <string name="app_name">Learn Braille</string>
     <string name="action_settings">Settings</string>
-    <string name="actionSettings">Ajustes</string>
-    <string name="alphabet">Alfabeto</string>
-    <string name="alphabetDescription">Alfabeto Braille, todo el abecedario</string>
-    <string name="exercises">Ejercicios</string>
-    <string name="characters">Caracteres</string>
-    <string name="charactersExercises">Ejercicios de letras</string>
-    <string name="charactersExercisesDescription">Ejercicios de letras, test de primer nivel, consiste en un test dónde se muestra una letra en Braille y hay que introducir la letra leida</string>
-    <string name="title_activity_characters_exercises">Ejercicios de letras</string>
-    <string name="title_activity_exercises">Ejercicios</string>
-    <string name="ask_label">Pregunta</string>
-    <string name="answerDescription">Introduce el texto que has leido arriba</string>
-    <string name="next">Siguiente</string>
-    <string name="nextContinue">Continuar</string>
-    <string name="nextDescription">Pulsa siguiente para comprobar y continuar</string>
-    <string name="answerSuccess">Bien</string>
+    <string name="actionSettings">Settings</string>
+    <string name="alphabet">Alphabet</string>
+    <string name="alphabetDescription">Braille alphabet, the whole alphabet</string>
+    <string name="exercises">Exercises</string>
+    <string name="characters">Chars</string>
+    <string name="charactersExercises">Chars exercises</string>
+    <string name="charactersExercisesDescription">Chars exercises, first level test, consists of a test where a char is shown in Braille and the char read must be entered</string>
+    <string name="title_activity_characters_exercises">Chars exercises</string>
+    <string name="title_activity_exercises">Exercises</string>
+    <string name="ask_label">Question</string>
+    <string name="answerDescription">Enter the text you have read above</string>
+    <string name="next">Next</string>
+    <string name="nextContinue">Continue</string>
+    <string name="nextDescription">Press next to check and continue</string>
+    <string name="answerSuccess">Right</string>
     <string name="answerError">Error</string>
-    <string name="title_activity_alphabet">Alfabeto</string>
-    <string name="wordExercises">Ejercicios de palabras</string>
-    <string name="wordExercisesDescription">Ejercicios de palabras, test de segundo nivel, test de palabras en Braille, debes leer e introducir la palabra</string>
-    <string name="title_activity_word_exercises">Ejercicios de palabras</string>
-    <string name="character_label">Letra</string>
-    <string name="word_label">Palabra</string>
-    <string name="phrase_label">Frase</string>
-    <string name="check">Comprobar</string>
-    <string name="result">Resultados</string>
-    <string name="phraseExercises">Ejercicios de frases</string>
-    <string name="phraseExercisesDescription">Ejercicios de frases, test de tercer nivel, introduce la frase que has leído en Braille</string>
-    <string name="title_activity_phrase_exercises">Ejercicios de frases</string>
-    <string name="title_activity_characters">Test caracteres ascii</string>
-    <string name="title_activity_font_test">Font test caracteres ascii</string>
-    <string name="actionHelp">Ayuda</string>
-    <string name="actionAlphabet">Alfabeto</string>
-    <string name="title_activity_results_exercises">Resultados del ejercicio</string>
-    <string name="okLabel">Correctas</string>
-    <string name="failLabel">Falladas</string>
-    <string name="review">Repasar los siguientes caracteres</string>
-    <string name="resulNoErrors">No has cometido ningún fallo, pasa al siguiente nivel</string>
+    <string name="title_activity_alphabet">Alphabet</string>
+    <string name="wordExercises">Words exercises</string>
+    <string name="wordExercisesDescription">Word exercises, second level test, Braille word test, you must read and enter the word</string>
+    <string name="title_activity_word_exercises">Words exercises</string>
+    <string name="character_label">Char</string>
+    <string name="word_label">Word</string>
+    <string name="phrase_label">Sentence</string>
+    <string name="check">Check</string>
+    <string name="result">Results</string>
+    <string name="phraseExercises">Sentences exercises</string>
+    <string name="phraseExercisesDescription">Sentences exercises, third level test, enter the Sentence you have read in Braille</string>
+    <string name="title_activity_phrase_exercises">Sentences exercises</string>
+    <string name="title_activity_characters">Test characters ascii</string>
+    <string name="title_activity_font_test">Font test characters ascii</string>
+    <string name="actionHelp">Help</string>
+    <string name="actionAlphabet">Alphabet</string>
+    <string name="title_activity_results_exercises">Exercises results</string>
+    <string name="okLabel">Corrects</string>
+    <string name="failLabel">Errors</string>
+    <string name="review">Review the following characters</string>
+    <string name="resulNoErrors">You have not made any errors, go to the next level</string>
     <string name="fontTest">Font test</string>
-    <string name="sdk_dialog_message">Versión de android no soportada</string>
+    <string name="sdk_dialog_message">Android version not supported</string>
     <string name="sdk_dialog_title">API version</string>
-    <string name="phrase">Frase</string>
-    <string name="character">Letra</string>
-    <string name="number">Número</string>
-    <string name="timeLabel">Tiempo</string>
-    <string name="bestTimeLabel">Mejor</string>
-    <string name="title_activity_help">Ayuda</string>
+    <string name="phrase">Sentence</string>
+    <string name="character">Char</string>
+    <string name="number">Number</string>
+    <string name="timeLabel">Time</string>
+    <string name="bestTimeLabel">Best</string>
+    <string name="title_activity_help">Help</string>
     <string name="sloganParagraph">
-        \nAPRENDE BRAILLE
-        \nLa mejor manera de aprender es practicando.
-        \nVersion 1.8
+        \nLEARN BRAILLE
+        \nThe best way to learn is by practicing.
+        \nVersion 1.9
     </string>
     <string name="mainParagraph">
-        \nALFABETO BRAILLE
-        \nEl sistema Braille es un alfabeto, apartir del signo generador
+        \nALPHABET BRAILLE
+        \nThe Braille system is an alphabet, starting from the generator sign
         \n1 4
         \n2 5
         \n3 6
         \n
-        \nA partir de estos seis puntos se pueden generar 63 combinaciones para representar las letras del abecedario.
-        \nPor ejemplo la letra q serían los puntos:
+        \nFrom these six points, 63 combinations can be generated to represent the letters of the alphabet.
+        \nFor example the char q is the points:
         \n1 4
         \n2 5
         \n3
         \n
-        \nOtro ejemplo la letra u sería
+        \nAnother example the char u is:
         \n1
         \n
         \n3 6
         \n
-        \nRepasa todo el abecedario pulsando el botón alfabeto o en el menú alfabeto.
+        \nGo through the entire alphabet by pressing the alphabet button or in the alphabet menu.
     </string>
     <string name="privacyPolicyShortParagraph">
-        \nPOLÍTICA DE PRIVACIDAD DE APRENDE BRAILLE APP ANDROID
-        \nNo requiere ningún permiso, no se recoge ni se envía ninguna información del usuario ni del dispositivo.
-        \nNo se recolecta ningún dato personal.
-        \nNo se envía ninguna información a internet, ni a servidores propios ni de terceros.
+        \nPRIVACY POLICY OF LEARN BRAILLE APP ANDROID
+        \nIt does not require any permission, no user or device information is collected or sent.
+        \nNo personal data is collected.
+        \nNo information is sent to the internet, or to its own or third party servers.
     </string>
     <string name="privacyPolicyLongParagraph">
-        \nEsta política de privacidad simplemente te informa que esta app
-        \nno recolecta información personal ni del dispositivo
-        \ny que no se envía ninguna información a internet,
-        \nni a servidores propios ni de terceros.
-        \nNo requiere conexión a internet, ni ningún permiso.
-        \nSimplemente la app intenta que puedas apreder braille fácilmente
-        \ny tengas una chuleta Braille a mano por si fuera necesario.
+        \nThis privacy policy simply informs you that this app
+        \ndoes not collect personal or device information
+        \nand that no information is sent to the internet,
+        \nneither to own servers nor to third parties.
+        \nIt does not require an internet connection, nor any permission.
+        \nThe app simply tries to make it easy for you to learn braille
+        \nand have a Braille cheat sheet on hand in case you need it.
         \n
-        \nLa política de privacidad es pública en el siguiente enlace: https://raw.githubusercontent.com/mariouged/AprendeBraille/main/politica-privacidad
-        \ny el usuario puede leerla en la pantalla principal
-        \nNo se recoge ni transmite ningún datos de caracter personal, ni dispositivo , ni sensible y tampoco se comparten con ningún tercero.
+        \nThe privacy policy is public at the following link: https://raw.githubusercontent.com/mariouged/AprendeBraille/main/privacy-policy
+        \nand the user can read it on the main screen
+        \nNo personal, device, or sensitive data is collected or transmitted and it is not shared with any third party.
     </string>
     <string name="helpParagraph">
-        \nLa aplicación, contiene el alfabeto braille en Español.
-        Permite realizar ejercicios de letras, números, palabras y frases.
-        Son test de preguntas, en las que se debe leer en braille e introducir la respuesta.
-        Al finalizar el ejercicio se mostrarán las correctas, falladas, tiempo empleado
-        , mejor tiempo y las letras que hay que repasar.
+        \nThe application contains the braille alphabet.
+         Allows you to do exercises with letters, numbers, words and phrases.
+         They are question tests, in which you must read in Braille and enter the answer.
+         At the end of the exercise, the correct, failed, time spent will be displayed
+         , better time and the letters to be reviewed.
         \n
-        \nPrimero repasa el alfabeto, haz ejercicios de letras para practicar y aprender todas.
-        Con los ejercicios de palabras terminarás de aprender el alfabeto.
-        Para el nivel más avanzado haz ejercicios de frases.
+        \nFirst review the alphabet, do letter exercises to practice and learn all of them.
+         With the word exercises you will finish learning the alphabet.
+         For the more advanced level, do phrase exercises.
         \n
-        \nTambién hay ejercicios de números, los números del 1 al 0, coinciden con las letras de la a hasta la j.
-        \nPero llevan delante el signo 3 4 5 6.
-        \n  4
-        \n  5
+        \nThere are also number exercises, the numbers from 1 to 0, match the chars from a to j.
+        \nBut they have the sign 3 4 5 6 in front of them.
+        \n   4
+        \n   5
         \n3 6
         \n
-        \nLamentandolo mucho sólo sirve para que aprendan personsa que ven con los ojos: profesores, amigos, familiares, ...
-        \n"Los ciegos también ven, pero con las manos y los oídos"
-        \nLa aplicación es accesible, con descripciones para los textos, botones, etiquetas ...
-        Activa el servicio TalkBack y podrás acceder a una descripción de cada elemento.
+        \nRegretting it a lot only helps people who see with their eyes to learn: teachers, friends, family, ...
+        "The blind also see, but with their hands and ears"
         \n
-        \nTienes disponibles mensajes de voz cuando aciertas o fallas, en el menú ajustes pueden ser configurados.
+        \nThe application is accessible, with descriptions for the texts, buttons, labels ...
+        Activate the TalkBack service and you will be able to access a description of each item.
         \n
-        \nPor el momento:
-        \n- No se utilizan mayúsculas.
-        \n- Solo en Español
+        \nVoice messages are available when you hit or miss, in the settings menu they can be configured.
         \n
-        \nPuedes usarla en cualquier momento, no necesita conexión a internet por lo que no te consumirá datos.
+        \nFor the moment:
+        \n- Capital letters are not used.
+        \n- Only in Spanish and English.
+        \n
+        \nTODO:
+        \n- Signs of operation and comparison
+        \n- Currency and measurement
+        \n- Special symbols
+        \n
+        \nYou can use it at any time, it does not need an internet connection so it will not consume data.
     </string>
     <string name="licenseParagraph">
         \nLICENSE
@@ -137,16 +143,16 @@
         \n
         \nContact: mario.ugedo@gmail.com
     </string>
-    <string name="phraseExample">El perro de san roque no tiene rabo porque Ramón Ramirez se lo ha cortado</string>
-    <string name="title_activity_numbers_exercises">Ejercicios de números</string>
-    <string name="numbersExercises">Ejercicios de números</string>
-    <string name="numbersExercisesDescription">Ejercicios de números, otro test de primer nivel, consiste en un ejercicio dónde se muestra un número en Braille y hay que introducir el número leído</string>
-    <string name="number_label">Número</string>
-    <string name="answerNumberDescription">Introduce el número que has leido arriba</string>
-    <string name="prefCategorySpeechTitle">HABLA</string>
-    <string name="prefSpeechOnAnswerOk">Hablar en respuesta correta</string>
-    <string name="prefSpeechOnAnswerOkSum">Reproduce por voz el mensaje: Bien</string>
-    <string name="prefSpeechOnAnswerFail">Hablar en respuesta fallada</string>
-    <string name="prefSpeechOnAnswerFailSum">Reproduce por voz el mensaje: Error</string>
-    <string name="title_activity_settings">Ajustes</string>
+    <string name="phraseExample">the rain in spain stays mainly in the plain</string>
+    <string name="title_activity_numbers_exercises">Numbers exercises</string>
+    <string name="numbersExercises">Numbers exercises</string>
+    <string name="numbersExercisesDescription">Number exercises, another first-level test, consists of an exercise where a number is shown in Braille and the number read must be entered</string>
+    <string name="number_label">Number</string>
+    <string name="answerNumberDescription">Enter the number you have read above</string>
+    <string name="prefCategorySpeechTitle">Speech</string>
+    <string name="prefSpeechOnAnswerOk">Speech in correct answer</string>
+    <string name="prefSpeechOnAnswerOkSum">Play the message by voice: Right</string>
+    <string name="prefSpeechOnAnswerFail">Speech in failed response</string>
+    <string name="prefSpeechOnAnswerFailSum">Play the message by voice: Error</string>
+    <string name="title_activity_settings">Settings</string>
 </resources>
