button to install Braille cheat sheet app

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -131,4 +131,6 @@
     <string name="prefSpeechOnAnswerFail">Hablar en respuesta fallada</string>
     <string name="prefSpeechOnAnswerFailSum">Reproduce por voz el mensaje: Error</string>
     <string name="title_activity_settings">Ajustes</string>
+    <string name="cheatSheet">Aplicación Hoja de trucos Braille</string>
+    <string name="cheatSheetDescription">Hoja de trucos Braille en la Play Store</string>
 </resources>
