--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,6 +132,6 @@
     <string name="prefSpeechOnAnswerFail">Speech in failed response</string>
     <string name="prefSpeechOnAnswerFailSum">Play the message by voice: Error</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="cheatSheet">App Braille Cheat Sheet</string>
-    <string name="cheatSheetDescription">Braille Cheat Sheet App on Play Store</string>
+    <string name="InviteMeCoffee">Invite me to a coffee</string>
+    <string name="cheatSheetDescription">Invite me to a coffee buying a Braille Cheat Sheet App on Play Store</string>
 </resources>
